--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,10 @@ body {
     background-color: #0B2434;
     padding: 20px;
     font-family: 'Karla', sans-serif;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 main {
@@ -33,14 +37,22 @@ main {
     width: 50px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    justify-items: center;
     align-items: center;
-    cursor: pointer;
 }
 
-.die-num {
+/* .die-num {
     font-size: 2rem;
+} */
+
+.dot {
+    height: 10px;
+    width: 10px;
+    background-color: black;
+    border-radius: 50%;
 }
 
 .roll-dice {
