--- a/src/styles.css
+++ b/src/styles.css
@@ -4,13 +4,14 @@
 
 body {
     margin: 0;
-    background-color: #0B2434;
     padding: 20px;
     font-family: 'Karla', sans-serif;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+    background-image: linear-gradient(to right, #434343 0%, black 100%);
 }
 
 main {
@@ -35,18 +36,19 @@ main {
 .die-face {
     height: 50px;
     width: 50px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     justify-items: center;
     align-items: center;
+    transition: transform 0.2s ease;
 }
 
-/* .die-num {
-    font-size: 2rem;
-} */
+.die-face:hover {
+    transform: scale(1.1); 
+}
 
 .dot {
     height: 10px;
@@ -61,10 +63,12 @@ main {
     width: 150px;
     border: none;
     border-radius: 6px;
-    background-color: #5035FF;
     color: white;
     font-size: 1.2rem;
     font-family: 'Karla', sans-serif;
+    background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898;
+    background-blend-mode: multiply,multiply;
+    transition: background 0.3s ease, box-shadow 0.3s ease;
 }
 
 .roll-dice:focus {
@@ -72,6 +76,9 @@ main {
 }
 
 .roll-dice:active {
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.3) 100%), 
+                radial-gradient(at top center, rgba(255, 255, 255, 0.3) 0%, rgba(0, 0, 0, 0.5) 120%) #1A374D;
+    background-blend-mode: multiply, multiply;
     box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
 
@@ -87,6 +94,18 @@ main {
     text-align: center;
 }
 
+.watermark {
+    position: absolute;
+    bottom: 10px; 
+    right: 10px;  
+    width: 45px; 
+    height: auto;
+    opacity: 0.5; 
+    z-index: 10;
+    background-color: #0B2434;
+    pointer-events: none; 
+}
+
 .modal {
     position: fixed;
     top: 0;
@@ -96,12 +115,51 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s ease, visibility 0.5s ease; 
+    z-index: 1000;
+    pointer-events: none; /* Prevents interaction when hidden */
+}
+
+.modal.show {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto; /* Allows interaction when visible */
 }
 
 .modal-content {
     background-color: white;
-    padding: 20px;
-    border-radius: 10px;
+    padding: 30px;
+    border-radius: 15px; 
     text-align: center;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+    transform: translateY(-50px); 
+    transition: transform 0.4s ease; 
 }
+
+.modal.show .modal-content {
+    transform: translateY(0); 
+}
+
+.modal-content h2 {
+    font-size: 2rem; 
+    margin-bottom: 20px;
+}
+
+.modal-content p {
+    font-size: 1.2rem; 
+    margin-bottom: 30px;
+}
+
+.modal-content button {
+    padding: 10px 20px;
+    transition: background-color 0.3s ease; 
+}
+
+.modal-content button:hover {
+    background-color: #2f2f30; 
+}
+
+
